Comeco da introducao

--- a/relatorio2/bare_conf.tex
+++ b/relatorio2/bare_conf.tex
@@ -4,6 +4,7 @@
 \usepackage{algorithmic}
 \usepackage{array}
 \usepackage{url}
+\usepackage{graphicx}
 \usepackage[portuguese]{babel}
 \usepackage[utf8]{inputenc}
 
@@ -37,6 +38,27 @@ The abstract goes here.
 \IEEEpeerreviewmaketitle
 
 \section{Introdução}
+	Simular redes de computadores tem um relevancia enorme para engenheiros, cientistas e projetistas de redes, permite com que uma topologia seja testada previamente antes de, efetivamente,gastar recursos para a implementacao fisica da rede em algum ambiente, poupando dinheiro e tempo.
+	
+	Neste trabalho temos como objetivo simular uma topologia de rede, com alguns requisitos, para fortalecermos conceitos aprendidos em sala de aula, mais especificamente topicos como camada fisica e de enlace e protocolos utilizados no simulador.
+	
+	Os requisitos do trabalho sao:
+	
+	\begin{itemize}
+		\item Quatro redes LANs Ethernet (padrao 802.3) 
+		\item Duas LANs Wi-Fi sem fio (padrao 802.11x)
+		\item Uma rede WAN conectando as outras redes
+		\item Minimo de 10 clientes em cada rede
+	\end{itemize}
+
+	Assim adotados a topologia indicada pela figura \ref{fig:topologia}.
+	
+	\begin{figure}[h]
+		\centering
+		\includegraphics[scale=0.45]{./images/topologia}
+		\caption{}
+		\label{fig:topologia}
+	\end{figure}
 
 \section{Conceitos Teóricos}
 
