--- a/relatorio2/bare_conf.tex
+++ b/relatorio2/bare_conf.tex
@@ -31,16 +31,12 @@
 
 \maketitle
 
-\begin{abstract}
-The abstract goes here.
-\end{abstract}
-
 \IEEEpeerreviewmaketitle
 
 \section{Introdução}
-	Simular redes de computadores tem um relevancia enorme para engenheiros, cientistas e projetistas de redes, permite com que uma topologia seja testada previamente antes de, efetivamente,gastar recursos para a implementacao fisica da rede em algum ambiente, poupando dinheiro e tempo.
+	Simular redes de computadores tem um relevancia enorme para engenheiros, cientistas e projetistas de redes, permite com que uma topologia seja testada previamente de, efetivamente,gastar recursos para a implementacao fisica da rede em algum ambiente, poupando dinheiro e tempo.
 	
-	Neste trabalho temos como objetivo simular uma topologia de rede, com alguns requisitos, para fortalecermos conceitos aprendidos em sala de aula, mais especificamente topicos como camada fisica e de enlace e protocolos utilizados no simulador.
+	Neste trabalho temos como objetivo simular uma topologia de rede, com alguns requisitos, para fortalecermos conceitos aprendidos em sala de aula, mais especificamente topicos como a camada fisica e de enlace e protocolos utilizados no simulador.
 	
 	Os requisitos do trabalho sao:
 	
@@ -60,7 +56,12 @@ The abstract goes here.
 		\label{fig:topologia}
 	\end{figure}
 
+	Detalhes a respeito da  topologia, tipo de conexao, protocolos utilizados serao abordados melhor durante a proxima sessao, de conceitos teoricos. 
+
 \section{Conceitos Teóricos}
+
+	\subsection{\textbf{Topologia}}
+		Podemos observar a topologia implementada na figura \ref{fig:topologia} 
 
 \section{Analise Experimental}
 
