Mais um paragrafo, e posicoes corretas no anim

--- a/relatorio2/bare_conf.tex
+++ b/relatorio2/bare_conf.tex
@@ -61,7 +61,7 @@
 \section{Conceitos Teóricos}
 
 	\subsection{\textbf{Topologia}}
-		Podemos observar a topologia implementada na figura \ref{fig:topologia} 
+		Podemos observar que a topologia implementada na figura \ref{fig:topologia} e uma topologia de malha, onde conectamos todos os pontos de acesso das redes sem fio e das redes LAN, assim ela nos apresenta certas caracteristicas.
 
 \section{Analise Experimental}
 
